# sststack

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_MIS9.py
examples/data/MIS9/: Core_information.xlsx
examples/data/MIS9/ens_age/: 64PE-174P13_d18O.txt  DSDP-607_MAT_sum.txt  DSDP-607_MAT_win.txt  ELT45-029_MAT_sum.txt  ELT45-029_MAT_win.txt  ELT49-017_MAT_sum.txt  ELT49-017_MAT_win.txt  ELT49-018_MAT_sum.txt  ELT49-018_MAT_win.txt  ELT49-021_MAT_sum.txt  ELT49-021_MAT_win.txt  ERDC-093P_d18O.txt  GeoB1113-4_d18O.txt  GeoB3327-5_Uk37.txt  GeoB3603-2_Uk37.txt  KX97322-4_MgCa.txt  KX97322-4_d18O.txt  MD01-2378_d18O.txt  MD01-2416_d18O.txt  MD01-2443-2444_Uk37.txt  MD01-2443-2444_d18O.txt  MD02-2575_MgCa.txt  MD02-2575_d18O.txt  MD02-2588_Uk37.txt  MD03-2699_Uk37.txt  MD03-2699_d18O.txt  MD04-2881_d18O.txt  MD05-2901_Uk37.txt  MD05-2901_d18O.txt  MD05-2920_MgCa.txt  MD05-2925_MgCa.txt  MD05-2925_d18O.txt  MD06-2986_MgCa.txt  MD06-3074B_MgCa.txt  MD06-3074B_d18O.txt  MD94-101_MAT.txt  MD95-2040_d18O.txt  MD96-2077_Uk37.txt  MD96-2080_MgCa.txt  MD96-2080_d18O.txt  (+53 more)
examples/data/MIS9/ens_anomalies_annual/: ERDC-093P_d18O.txt  GeoB1113-4_d18O.txt  GeoB3327-5_Uk37.txt  GeoB3603-2_Uk37.txt  KX97322-4_MgCa.txt  KX97322-4_d18O.txt  MD01-2378_d18O.txt  MD01-2416_d18O.txt  MD01-2443-2444_Uk37.txt  MD01-2443-2444_d18O.txt  MD02-2575_MgCa.txt  (+62 more)
src/sststack/: __init__.py  plotting.py
src/sststack/cli/: __init__.py  run.py
src/sststack/core/: __init__.py  stacking.py
src/sststack/io/: __init__.py  dataset.py  logging_utils.py
tests/: test_import.py
(+135 files in other folders)
