[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sststack"
version = "0.1.0"
description = "Reproductible MIS 9 global/regional temperature stacks from SST reconstructions"
readme = "README.md"
authors = [{name="Stevenard Nathan", email="nathan.stevenard@univ-grenoble-alpes.fr"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.2",
    "scipy>=1.10",
    "tqdm>=4.66",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sststack = "sststack.cli.run:main"

